feat: ✨ Remove review title
